tests/baselines/reference/modularizeLibrary_ErrorFromUsingWellknownSymbolWithOutES6WellknownSymbolLib.errors.txt
tests/cases/compiler/modularizeLibrary_ErrorFromUsingWellknownSymbolWithOutES6WellknownSymbolLib.ts(7,1): error TS2322: Type '为假' is not assignable to type '文字'.
tests/cases/compiler/modularizeLibrary_ErrorFromUsingWellknownSymbolWithOutES6WellknownSymbolLib.ts(7,3): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/compiler/modularizeLibrary_ErrorFromUsingWellknownSymbolWithOutES6WellknownSymbolLib.ts (2 errors) ====
    function f(x: number, y: number, z: number) {
        return Array.from(arguments);
    }
    
    f(1, 2, 3);   // no error
    let a = ['c', 'd'];
    a[Symbol.isConcatSpreadable] = false;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '为假' is not assignable to type '文字'.
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.